Modified header in R chunk.

--- a/inst/rmarkdown/templates/document_template/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/document_template/skeleton/skeleton.Rmd
@@ -10,7 +10,7 @@ editor_options:
   chunk_output_type: inline
 ---
 
-```{r global-options, include=FALSE}
+```{r Global-options, include=FALSE}
 knitr::opts_chunk$set(fig.width=6, fig.height=4, fig.path='Figs/',
                       warning=FALSE, message=FALSE, cache=TRUE)
 ```
