Changed fig.height to fig.asp with golden ratio.

--- a/inst/rmarkdown/templates/document_template/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/document_template/skeleton/skeleton.Rmd
@@ -11,7 +11,7 @@ editor_options:
 ---
 
 ```{r Global-options, include=FALSE}
-knitr::opts_chunk$set(fig.width=6, fig.height=4, fig.path='Figs/',
+knitr::opts_chunk$set(fig.width=6, fig.asp=0.618, fig.path='Figs/',
                       warning=FALSE, message=FALSE, cache=TRUE)
 ```
 
